--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-#androidAppUrl = C:\\Users\\PATAN MUNNA\\OneDrive\\Desktop\\eatOS.Staging.apk
-androidAppUrl = C:\\Users\\PATAN MUNNA\\Downloads\\POS-4.3.0.140-19Jan2024-Staging-Sunmi.apk"
+#androidAppUrl = C:\\Users\\PATAN MUNNA\\Downloads\\4.10.1.269-5-February-2024-Sunmi-Staging.apk
+udid =emulator-5564
 androidAutomationName=UiAutomator2
 androidAppPackage=com.eatos.pos
 androidAppActivity=com.poslabs.eatos.MainActivity
