--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-#androidAppUrl = C:\\Users\\PATAN MUNNA\\Downloads\\4.10.1.269-5-February-2024-Sunmi-Staging.apk
+androidAppUrl = C:\\Users\\PATAN MUNNA\\Downloads\\4.10.1.273-12-February-2024-Sunmi-Staging.apk
 udid =emulator-5564
 androidAutomationName=UiAutomator2
 androidAppPackage=com.eatos.pos
