Extent reports and few updates

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,11 @@
-androidAppUrl = C:\\Users\\PATAN MUNNA\\Downloads\\4.10.1.273-12-February-2024-Sunmi-Staging.apk
-udid =emulator-5564
+## Device config Settings
+androidAppUrl = C:\\Users\\PATAN MUNNA\\Downloads\\POS-4.10.5.148-15Apr2024-Staging-Sunmi.apk
+udid =emulator-5572
 androidAutomationName=UiAutomator2
-androidAppPackage=com.eatos.pos
-androidAppActivity=com.poslabs.eatos.MainActivity
+//androidAppPackage=com.eatos.pos
+//androidAppActivity=com.poslabs.eatos.MainActivity
 
 
+## user details
+Username = np5@eigital.com
+Password = @Password123
